# secagent-agents

./: .gitignore  README.md  pyproject.toml  secagent.ignore.yaml  secagent.policy.yaml  secagent.reviewers.yaml
.github/workflows/: secagent-bench.yml  secagent.yml
benchmarks/: README.md
benchmarks/fixtures/python_idor/: app.py  expected.json
security_agents/: __init__.py  automation.py  benchmark.py  cli.py  codeowners.py  config.py  execution.py  history.py  models.py  openai_client.py  pipeline.py  policy.py  profiles.py  prompts.py  reporting.py  selection.py  suppression.py  telemetry.py
skills/: default_security_skills.yaml  fintech_security_skills.yaml  health_security_skills.yaml  llm_research_sources.md  llm_security_skills.yaml  research_sources.md
tests/: test_automation.py  test_benchmark.py  test_codeowners.py  test_config_profiles.py  test_execution.py  test_history.py  test_profiles.py  test_reporting.py  test_reviewer_aliases.py  test_selection.py  test_suppression.py
