[project]
name = "secagent"
version = "0.1.0"
description = "Security agent pipeline with detector-manager-validator-fixer stages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai-agents>=0.2.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.1",
]

[project.scripts]
secagent = "security_agents.cli:main"
secagent-bench = "security_agents.benchmark:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["security_agents"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]
